[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Enemies/greenAlien.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyScripts/enemy_asteroid.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Utility/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Utility/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/SFX/ArcadeExplosion.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=8]
radius = 57.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 79, 79 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 57, 57 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 79, 79 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 87.25, 85 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 33.0
height = 114.0

[node name="enemy_base" type="KinematicBody2D" groups=["enemy"]]
pause_mode = 1
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
movementSpeed = 225
healthDroppedValue = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7.62939e-06 )
scale = Vector2( 0.272, 0.232 )
texture = ExtResource( 1 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.54747e-13 )
shape = SubResource( 8 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="DisableTimer" parent="HurtBox" index="1"]
wait_time = 0.1

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="BulletCollision" type="StaticBody2D" parent="." groups=["enemy"]]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollision"]
shape = SubResource( 5 )

[node name="BulletCollisionArea" type="Area2D" parent="." groups=["enemy"]]
visible = false
position = Vector2( -210, -32 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollisionArea"]
position = Vector2( 210, 32 )
shape = SubResource( 6 )

[node name="DeathExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "SFX"

[node name="stun_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="difficulty_scale" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="inFront" type="Sprite" parent="."]

[node name="enemyPush" type="Area2D" parent="inFront" groups=["enemyPush"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="inFront/enemyPush"]
position = Vector2( 89, 0 )
rotation = 1.5708
shape = SubResource( 9 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="hurt" from="HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="finished" from="DeathExplosionSound" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="area_entered" from="inFront/enemyPush" to="." method="_on_enemyPush_area_entered"]
[connection signal="area_exited" from="inFront/enemyPush" to="." method="_on_enemyPush_area_exited"]

[editable path="HurtBox"]
[editable path="HitBox"]
